--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,26 @@
-.App {
+body{
+  background: rgb(255,238,102);
+  background: linear-gradient(283deg, rgba(255,238,102,1) 0%, rgba(76,181,224,1) 44%);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.container {
   text-align: center;
   align-items: center;
   justify-content: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-right: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-table, th, td, button {
+table, th, td, button, tr {
   color: white;
   border:1px solid white;
   text-align: center;
-  background-color: rgb(106, 167, 192);
+  background-color: transparent;
 }
 
 th, td {
@@ -53,4 +30,31 @@ th, td {
 
 button {
   border-width: 0;
+}
+
+input {
+  height: 25px;
+  background-color: white;
+  border: 1px solid white;
+  text-align: center;
+  color: black;
+}
+
+input::placeholder {
+  width: 100%;
+  border-width: 0;
+  color: rgb(106, 167, 192);
+  background-color: white;
+}
+
+input:focus {
+  outline-width: 0;
+}
+
+input:focus::placeholder {
+  color: transparent;
+}
+
+.remove{
+  color: red;
 }
